<resources>
    <string name="app_name">Domino</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="add_account">Создать аккаунт</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="start">start</string>
    <string name="Enter">Вход</string>
    <string name="login_in">Войти</string>
    <string name="create_tournir">Создание турнира</string>
    <string name="enter_name">Введите название</string>
    <string name="nazvanie">Название</string>
    <string name="description">Описание</string>
    <string name="enter_description">Введите описание</string>
    <string name="registration_text">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register_in">Зарегестрироваться</string>
    <string name="number_of_players">Количество игроков</string>
    <string name="back">Покинуть</string>
    <string name="enter_answer">Введите ответ</string>
    <string name="solve_solution">Ответить</string>
    <string name="profile">Профиль</string>
    <string name="create_room">Создать турнир</string>
    <string name="yours_rating">Ваш рейтинг</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="type">Режим</string>
    <string name="show_solution">Показать решение</string>
    <string name="exit_">Выйти</string>
    <string name="game_over">Игра окончена</string>
    <string name="rules_title">Правила игры</string>
    <string name="rules"></string>
    <string name="do_you_wanna_exit">Вы уверены, что хотите выйти?</string>
</resources>
