<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegFragment"
    android:paddingTop="16dp"
    style="@style/AppTheme.NotCardBackground">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/registration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_text"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"/>


    <android.support.v7.widget.CardView
        style="@style/AppTheme.EditText"
        android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_text"
        app:layout_constraintVertical_bias="0.1000000"
        app:cardCornerRadius="5dp">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_login" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_login"
        app:cardCornerRadius="5dp"
        android:id="@+id/input_password">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:cardCornerRadius="5dp"
        android:id="@+id/repeat_password_card">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.PinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_card"
        app:contentPadding="10dp"
        android:layout_marginTop="24dp">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_in"
            android:textSize="24sp"/>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>