<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthFragment"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    style="@style/AppTheme.NotCardBackground">

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Enter"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.EditText"
        android:id="@+id/descryption_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text"
        app:layout_constraintVertical_bias="0.1000000"
        app:cardCornerRadius="5dp">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/a_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_login" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/descryption_card"
        app:cardCornerRadius="5dp"
        android:id="@+id/Domino1">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/a_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/AppTheme.PinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/Domino1"
        app:contentPadding="10dp"
        android:layout_marginTop="24dp">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_in"
            android:textSize="24sp"/>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>